# DynaSD

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  performance_test.py  pyproject.toml  req.txt  setup.py  test_robust_caching.py
.github/workflows/: test.yml
DynaSD/: ABSSLP.py  GIN.py  HFER.py  IMPRINT.py  LiNDDA.py  LiRNDDA.py  LiRNDDA_backup.py  MINDA.py  MINDD.py  NDD.py  NDDBase.py  NDD_old.py  ONCET.py  ONDD.py  WAVENET.py  __init__.py  absolute_slope.py  base.py  utils.py
DynaSD.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
DynaSD/tools/: __init__.py  io.py  stats.py  viz.py
archive/: README.md
archive/legacy-models/: GIN_old.py  NDD_fixed.py  models.py
docs/: extending_models.md  phase_f_time_index_api.md  release_prep_handoff.md  spec_windowing_smoothing.md  testing_strategy.md
dynasd/: ABSSLP.py  LiNDDA.py  NDD.py  NDDBase.py  ONCET.py  WAVENET.py  __init__.py  _downloads.py  base.py  utils.py
dynasd/tools/: io.py  (+2 more)
examples/: example_utils.py  for_haoer.ipynb  plot_03_SimulateCombined.ipynb  plot_07_SimMulti.ipynb  quickstart.ipynb  test_gin.ipynb  test_sim.ipynb  visualize_smoothing_and_onset.ipynb
tests/: README.md  __init__.py  data_generators.py  run_all_tests.py  synthetic_data_generator.py  test_absslp.py  test_absslp_spec.py  test_gin.py  test_hfer_spec.py  test_imprint_spec.py  test_model_api_contract.py  test_ndd.py  test_ndd_family_spec.py  test_nddbase_internals.py  test_nn_forecasters_spec.py  test_pretrained_classifiers_spec.py  test_wavenet.py  test_windowing_smoothing_spec.py  visualization_utils.py
(+9 files in other folders)
